plugins {
  id 'java'
  id 'eclipse-wtp'
}

group 'it.francescofiora'
version = '1.0-SNAPSHOT'

allprojects {
  repositories {
    mavenLocal()
    mavenCentral()
  }
  sourceCompatibility = 1.17
  targetCompatibility = 1.17
}

subprojects {
  apply plugin: 'java'
  apply plugin: 'eclipse-wtp'
  apply plugin: 'checkstyle'
  apply plugin: 'jacoco'

  sourceCompatibility = 1.17
  targetCompatibility = 1.17

  group = rootProject.group
  version = rootProject.version

  checkstyle {
    toolVersion property('checkstyle.version')
    configFile  rootProject.file("config/checkstyle/checkstyle.xml")
    configProperties = [
         'checkstyle.cache.file': "${buildDir}/checkstyle.cache",
    ]
  }
  tasks.withType(Checkstyle) {
    reports {
      xml.enabled = false
      html.enabled = true
    }
  }
  checkstyleMain {
    source ='src/main/java'
  }

  test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
  }

  jacocoTestReport {
    dependsOn test
  }

  task cleanResources(type: Delete) {
    delete "build/resources"
  }
}

wrapper {
  gradleVersion = "7.4"
}
